--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1081,13 +1081,9 @@ h1, h2, h3, h4, h5, h6 {
     height: 100%;
 }
 #area_area_name {
-    height: 100%;
-}
-.sortable li {
-    max-width: 50%;
-}
-.sortable li:last-child {
-    margin-bottom: 0 !important;
+  height: 100%;
+  display: inline-table;
+  width: 100%;
 }
 #form-user-to-area .sortable {
     min-height: 60px;
